# CMakePractice

./: .gitignore  CMakeLists.txt  README.md  readme.md
project1/: CMakeLists.txt
project1/include/: A_101_120.h  A_41_50.h
project1/src/opencvSrc/src_101_120/: A103.cpp  A105.cpp  A108.cpp
project1/src/opencvSrc/src_11_20/: A11.cpp
project1/src/opencvSrc/src_1_10/: A10.cpp
project1/src/opencvSrc/src_41_50/: A42.cpp  A44.cpp  A47.cpp
project1/src/opencvSrc/src_51_60/: A58.cpp
project1/src/opencvSrc/src_71_80/: A72.cpp  A77.cpp
project2/: CMakeLists.txt
project2/cli/: main.cpp
project2/cmake/fetch/: spdlog.cmake
project2/include/: A_101_120.h  A_31_40.h  A_71_80.h  main.h
project2/src/opencvSrc/src_101_120/: A104.cpp
project2/src/opencvSrc/src_11_20/: A17.cpp
project2/src/opencvSrc/src_1_10/: A3.cpp  A8.cpp
project2/src/opencvSrc/src_31_40/: A35.cpp  A40.cpp
project2/src/opencvSrc/src_41_50/: A48.cpp
project2/src/opencvSrc/src_51_60/: A51.cpp  A57.cpp
project2/src/opencvSrc/src_61_70/: A64.cpp
project2/src/opencvSrc/src_71_80/: A73.cpp
project3/: CMakeLists.txt
project3/cmake/fetch/: Findcuda.cmake  Findonnxruntime.cmake
project3/include/: main.h  yolov5.hpp
project3/src/onnxSrc/: onnx_deploy.cpp  yolov5.cpp
project4/: CMakeLists.txt
project4/cli/: main.cpp
project4/cmake/fetch/: Findonnxruntime.cmake  spdlog.cmake
project4/include/: onnx_deploy.h
project4/src/onnxSrc/: onnx_deploy.cpp  yolov5.cpp
project9/: CMakeLists.txt  CMakeSettings.json
project9/cmake/fetch/: spdlog.cmake
project9/src/: CMakeLists.txt  main.cpp  main.h
project9/src/onnxSrc/: CMakeLists.txt  onnx_deploy.cpp
project9/src/onnxSrcDll/: CMakeLists.txt  onnx_deploy.h  typec_ocr.h  typec_ocr_prepostprocess.h
project9/src/opencvSrc/src_101_120/: A106.cpp  A107.cpp  A108.cpp  A_101_120.h
project9/src/opencvSrc/src_11_20/: A16.cpp
project9/src/opencvSrc/src_1_10/: A9.cpp
project9/src/opencvSrc/src_21_30/: A29.cpp
project9/src/opencvSrc/src_31_40/: A31.cpp
project9/src/opencvSrc/src_41_50/: A46.cpp  A49.cpp  A50.cpp
project9/src/opencvSrc/src_51_60/: A55.cpp  A56.cpp
project9/src/opencvSrc/src_61_70/: A61.cpp
project9/tools/: CMakeLists.txt  CvxText.cpp  CvxText.h  implfoundation.cpp  implfoundation.h
src/: A1.cpp  A102.cpp  A10_P.cpp  A11_P.cpp  A12.cpp  A12_P.cpp  A13.cpp  A13_P.cpp  A14_P.cpp  A15.cpp  A15_P.cpp  A16_P.cpp  A17_P.cpp  A18.cpp  A18_P.cpp  A19_P.cpp  A2.cpp  A21_P.cpp  A22.cpp  A22_P.cpp  A23_P.cpp  A24.cpp  A24_P.cpp  A25.cpp  A25_P.cpp  A26.cpp  A26_P.cpp  A30.cpp  A39.cpp  A40.cpp  A43.cpp  A45.cpp  A4_P.cpp  A5.cpp  A53.cpp  A54.cpp  A59.cpp  A5_P.cpp  A62.cpp  A63.cpp  (+21 more)
src/onnxSrc/: onnx_deploy.h  yolov5.hpp
src/opencvSrc/src_101_120/: A101.cpp  A108.cpp
src/opencvSrc/src_11_20/: A14.cpp  A19.cpp  A20.cpp
src/opencvSrc/src_1_10/: A1_P.cpp  A2_P.cpp  A3_P.cpp  A4.cpp  A4_P.cpp  A7.cpp  A_1_10.h
src/opencvSrc/src_21_30/: A21.cpp  A22.cpp  A23.cpp  A27.cpp  A28.cpp
src/opencvSrc/src_31_40/: A32.cpp  A33.cpp  A34.cpp  A36.cpp  A37.cpp  A38.cpp
src/opencvSrc/src_41_50/: A41.cpp  A45.cpp
src/opencvSrc/src_51_60/: A52.cpp  A_51_60.h
src/opencvSrc/src_61_70/: A65.cpp  A70.cpp
src/opencvSrc/src_71_80/: A75.cpp  A76.cpp  A80.cpp
